[gd_scene load_steps=17 format=3 uid="uid://b58m1qpfhvtqp"]

[ext_resource type="Script" path="res://2d/components/actors/BaseEnemy.gd" id="1_pxxkm"]
[ext_resource type="Script" path="res://2d/components/classes/ActorStat.gd" id="2_onm4p"]
[ext_resource type="PackedScene" uid="uid://dcnv7c42q4elk" path="res://components/ui/health_bar/health_bar.tscn" id="3_3abmc"]
[ext_resource type="AudioStream" uid="uid://dy7ys8rndjtot" path="res://assets/sound/walk_worm.wav" id="4_gjdto"]
[ext_resource type="AudioStream" uid="uid://cxng3pjkwo810" path="res://assets/sound/worm_attack.wav" id="5_bwa83"]
[ext_resource type="AudioStream" uid="uid://c44uovh532ydn" path="res://assets/sound/worm_hurt.wav" id="6_yomnn"]

[sub_resource type="Resource" id="Resource_tadcp"]
script = ExtResource("2_onm4p")
movement_speed = 100.0
jump_velocity = 0.0
attack_speed = 0.0
attack_range = 0.0
attack_damage = 30
attack_knock_back_vector = Vector2(1500, 0)
attack_self_knock_back_strength = 50.0
defense_damage_resistance = 0

[sub_resource type="CircleShape2D" id="CircleShape2D_t31eb"]
radius = 600.0

[sub_resource type="Animation" id="Animation_v52js"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.2, 0.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionPolygon2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBoxArea2D/HitBoxShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-62, 0)]
}

[sub_resource type="Animation" id="Animation_g1xc3"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.19, 0.19), Vector2(0.19, 0.2), Vector2(0.19, 0.19)]
}

[sub_resource type="Animation" id="Animation_hf3rw"]
resource_name = "move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.24, 0.2), Vector2(0.2, 0.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionPolygon2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBoxArea2D/HitBoxShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-62, 0), Vector2(-76, 0), Vector2(-62, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qok8l"]
_data = {
"RESET": SubResource("Animation_v52js"),
"idle": SubResource("Animation_g1xc3"),
"move": SubResource("Animation_hf3rw")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8jqkm"]
height = 28.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hee25"]
random_pitch = 1.5
random_volume_offset_db = 1.5
streams_count = 1
stream_0/stream = ExtResource("4_gjdto")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_plweo"]
random_pitch = 1.5
random_volume_offset_db = 1.5
streams_count = 1
stream_0/stream = ExtResource("5_bwa83")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sgdti"]
random_pitch = 1.5
random_volume_offset_db = 1.5
streams_count = 1
stream_0/stream = ExtResource("6_yomnn")

[node name="Worm" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_pxxkm")
stats = SubResource("Resource_tadcp")
aggro_shape = SubResource("CircleShape2D_t31eb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.55271e-15, 2.71051e-20)
scale = Vector2(0.2, 0.2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qok8l")
}
playback_default_blend_time = 0.5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-67, 25, 67, 25, 64, -4, 32, -18, -32, -18, -64, -4)

[node name="HitBoxArea2D" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 4
collision_mask = 2
monitorable = false

[node name="HitBoxShape2D" type="CollisionShape2D" parent="HitBoxArea2D"]
position = Vector2(-62, 0)
shape = SubResource("CapsuleShape2D_8jqkm")
debug_color = Color(0.131466, 0.621939, 0.505432, 0.42)

[node name="HealthBar" parent="." instance=ExtResource("3_3abmc")]
position = Vector2(0, -40)
debug_health_bar = true

[node name="WalkingAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_hee25")
volume_db = -15.0

[node name="AttackingAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_plweo")
volume_db = -15.0

[node name="HurtingAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_sgdti")
volume_db = -5.0

[node name="AggroDetectionArea2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
monitorable = false

[node name="AggroCollisionShape2D" type="CollisionShape2D" parent="AggroDetectionArea2D"]
shape = SubResource("CircleShape2D_t31eb")
debug_color = Color(0.0763676, 0.401153, 0.231133, 0.42)

[connection signal="body_entered" from="HitBoxArea2D" to="." method="_on_hit_box_area_2d_body_entered"]
[connection signal="body_entered" from="AggroDetectionArea2D" to="." method="_on_aggro_detection_area_2d_body_entered"]
[connection signal="body_exited" from="AggroDetectionArea2D" to="." method="_on_aggro_detection_area_2d_body_exited"]
